--- a/index.html
+++ b/index.html
@@ -3,6 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Explore movies and TV shows with translated scripts. Our platform offers a chance to create your own translated scripts and share it to the world."
+    />
+
+    <meta
+      property="og:title"
+      content="ScriptBy: Learn, Create, and Share Translated Scripts"
+    />
+    <meta
+      property="og:description"
+      content="Explore movies and TV shows with translated scripts. Our platform offers a chance to create your own translated scripts and share it to the world."
+    />
+    <meta property="og:image" content="/logo.png" />
 
     <link rel="icon" href="/img/favicon.png" />
     <link rel="apple-touch-icon" href="/img/apple-touch-icon.png" />
@@ -33,7 +47,7 @@
       href="https://unpkg.com/react-quill@1.3.3/dist/quill.snow.css"
     />
 
-    <title>Script By</title>
+    <title>Script By &mdash; Make your own script!</title>
   </head>
   <body>
     <div id="root"></div>
