--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       content="Explore movies and TV shows with translated scripts. Our platform offers a chance to create your own translated scripts and share it to the world."
     />
 
+    <!-- og -->
     <meta
       property="og:title"
       content="ScriptBy: Learn, Create, and Share Translated Scripts"
@@ -17,6 +18,24 @@
       content="Explore movies and TV shows with translated scripts. Our platform offers a chance to create your own translated scripts and share it to the world."
     />
     <meta property="og:image" content="/logo.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://scriptby.vercel.app" />
+    <meta property="og:site_name" content="Script By" />
+
+    <!--  TODO:summary card image -->
+    <!-- <meta name="twitter:card" content="summary_large_image" /> -->
+    <meta
+      name="twitter:title"
+      content="ScriptBy: Learn, Create, and Share Translated Scripts"
+    />
+    <meta
+      name="twitter:description"
+      content="Explore movies and TV shows with translated scripts. Our platform offers a chance to create your own translated scripts and share them with the world."
+    />
+    <meta name="twitter:image" content="/logo.png" />
+
+    <!-- for google -->
+    <link rel="canonical" href="https://scriptby.vercel.app" />
 
     <link rel="icon" href="/img/favicon.png" />
     <link rel="apple-touch-icon" href="/img/apple-touch-icon.png" />
@@ -41,10 +60,6 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap"
       rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/react-quill@1.3.3/dist/quill.snow.css"
     />
 
     <title>Script By &mdash; Make your own script!</title>
